applications/external-apps/confluence/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: confluence-old
  namespace: external-apps
spec:
  ports:
    - name: conf
      port: 80
      protocol: TCP
      targetPort: 8090
  type: ClusterIP
  clusterIP: None
---
apiVersion: v1
kind: Endpoints
metadata:
  name: confluence-old
  namespace: external-apps
subsets:
  - addresses:
      - ip: 10.3.3.33
    ports:
      - name: conf
        port: 8090
        protocol: TCP
