applications/external-apps/confluence/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: confluence-old
  namespace: external-apps
  annotations:
    kubernetes.io/ingress.class: traefik-external

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`${ARGOCD_ENV_DOMAIN_NET}`)
      kind: Rule
      services:
        - name: confluence-old
          port: conf
      # middlewares:
      #   - name: middleware-internal-ip
      #     namespace: traefik
  tls: {}
